<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.login.SimpleAskActivity">

    <RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/array"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="20dp"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:background="@drawable/arrow_left"
        />

    <RelativeLayout
        android:id="@+id/main_conten"
        android:layout_width="335dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="100dp">
        <TextView
            android:id="@+id/hello_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_"
            android:textStyle="bold"
            android:textAppearance="@style/agathon_"
            android:gravity="top"
            />
        <TextView
            android:id="@+id/user_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_"
            android:textAppearance="@style/agathon_"
            android:layout_toRightOf="@id/hello_"
            android:layout_marginLeft="@dimen/dp_3"
            android:textStyle="bold"
            android:textColor="@color/green_class"
            android:gravity="top"
            />
        <TextView
            android:id="@+id/welcome_"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_"
            android:textAppearance="@style/agathon_"
            android:layout_below="@id/hello_"
            android:layout_marginTop="@dimen/dp_3"
            android:textStyle="bold"
            />
        <TextView
            android:id="@+id/some_id"
            android:layout_width="335dp"
            android:layout_height="24dp"
            android:text="@string/be_id"
            android:textAppearance="@style/be_id"
            android:lineSpacingExtra="6sp"
            android:translationY="-2.77sp"
            android:gravity="top"
            android:layout_below="@id/welcome_"
            android:layout_marginTop="12dp"
            />

        <RelativeLayout
            android:id="@+id/group_1"
            android:layout_width="335dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/some_id"
            android:layout_marginTop="14dp"
            android:background="@drawable/question_card">
            <TextView
                android:id="@+id/w"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_alignParentRight="true"
                android:layout_marginRight="20dp"
                android:text="1/2"
                android:textAppearance="@style/be_id" />
            <TextView
                android:id="@+id/q_id"
                android:layout_width="295dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:gravity="top"
                android:layout_below="@id/w"
                android:text="@string/q_id"
                android:textStyle="bold"
                android:textAppearance="@style/q_id" />

            <RelativeLayout
                android:id="@+id/relativeLayout1"
                android:layout_width="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/q_id"
                android:layout_marginTop="20dp"
                android:background="@drawable/collum_1">
                <TextView
                    android:id="@+id/qw1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/green_class"
                    android:textStyle="bold"
                    android:text="理性、原则" />
                <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/icon1"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/checkyes"
                    android:visibility="invisible"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativeLayout2"
                android:layout_width="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout1"
                android:layout_marginTop="10dp"
                android:background="@drawable/collum_1">
                <TextView
                    android:id="@+id/qw2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/green_class"
                    android:textStyle="bold"
                    android:text="理想、梦想" />
                <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/icon2"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/checkyes"
                    android:visibility="invisible"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativeLayout3"
                android:layout_width="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout2"
                android:layout_marginTop="10dp"
                android:background="@drawable/collum_1">
                <TextView
                    android:id="@+id/qw3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/green_class"
                    android:textStyle="bold"
                    android:text="现实、实践" />
                <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/icon3"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/checkyes"
                    android:visibility="invisible"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativeLayout4"
                android:layout_width="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="wrap_content"
                android:layout_below="@id/relativeLayout3"
                android:layout_marginTop="10dp"
                android:background="@drawable/collum_1">
                <TextView
                    android:id="@+id/qw4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_alignParentLeft="true"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="20dp"
                    android:layout_marginLeft="20dp"
                    android:textColor="@color/green_class"
                    android:textStyle="bold"
                    android:text="艺术、冒险" />
                <RelativeLayout
                    xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/icon4"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_centerVertical="true"
                    android:layout_alignParentRight="true"
                    android:layout_marginRight="20dp"
                    android:background="@drawable/checkyes"
                    android:visibility="invisible"
                    />
            </RelativeLayout>
            <RelativeLayout
                android:id="@+id/relativeLayout5"
                android:layout_width="5dp"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_height="5dp"
                android:visibility="invisible"
                android:layout_below="@id/relativeLayout4"
                android:layout_marginTop="10dp"
                android:background="@drawable/collum_1">
            </RelativeLayout>
        </RelativeLayout>

    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/button1"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_alignParentRight="true"
        android:layout_marginRight="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/next1">
        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="下一步"
            android:textColor="@android:color/white"
            android:textSize="16sp"
            android:gravity="center_horizontal" />
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/button6"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="40dp"
        android:gravity="center"
        android:orientation="vertical"
        android:background="@drawable/skip">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="跳过"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            android:gravity="center_horizontal" />
    </RelativeLayout>

</RelativeLayout>